--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Jcw87's Web Projects</title>
+	<title>Sans</title>
 	<meta name="description" content="Super Mario Bros (World 1) Undertale Genocide Boss Fight (Spoilers)"/>
 </head>
 <body>
@@ -25,3 +25,4 @@
 	</script>
 </body>
 </html>
+
