--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>Game Clones</h1>
 	<a href="./c2-smb1/">Super Mario Bros (World 1)</a><br/>
-	<a href="./c2-sans-fight/">Undertale Genocide Boss Fight (Spoilers)</a><br/>
+	<a href="./trigWorksheets/">Undertale Genocide Boss Fight (Spoilers)</a><br/>
 	<h1>Other Projects</h1>
 	<a href="./ship-shape/">Ship Shape Anxiety Simulator</a><br/>
 	<a href="./analog-clock">Analog Clock</a><br/>
@@ -25,4 +25,5 @@
 	</script>
 </body>
 </html>
+
 
